sandbox/output
TicketDispenserTest.java:9: error: cannot find symbol
        assertEquals(1, turnNumberOfNewTicket - turnNumberOfPreviousTicket);
                        ^
  symbol:   variable turnNumberOfNewTicket
  location: class TicketDispenserTest
TicketDispenserTest.java:9: error: cannot find symbol
        assertEquals(1, turnNumberOfNewTicket - turnNumberOfPreviousTicket);
                                                ^
  symbol:   variable turnNumberOfPreviousTicket
  location: class TicketDispenserTest
2 errors
